--- a/thesis.bib
+++ b/thesis.bib
@@ -2666,3 +2666,63 @@ for Global Competitiveness},
 	title = {Hydrogen storage in {MOFs}: Machine learning for finding a needle in a haystack},
 	journal = {Patterns}
 }
+@article{Rycroft_2009,
+	doi = {10.1063/1.3215722},
+	url = {https://doi.org/10.1063%2F1.3215722},
+	year = 2009,
+	month = {dec},
+	publisher = {{AIP} Publishing},
+	volume = {19},
+	number = {4},
+	pages = {041111},
+	author = {Chris H. Rycroft},
+	title = {{VORO++}: A three-dimensional Voronoi cell library in C++},
+	journal = {Chaos}
+}
+@article{First_2013,
+	doi = {10.1016/j.micromeso.2012.07.049},
+	url = {https://doi.org/10.1016%2Fj.micromeso.2012.07.049},
+	year = 2013,
+	month = {jan},
+	publisher = {Elsevier {BV}},
+	volume = {165},
+	pages = {32--39},
+	author = {Eric L. First and Christodoulos A. Floudas},
+	title = {{MOFomics}: Computational pore characterization of metal{\textendash}organic frameworks},
+	journal = {Microporous and Mesoporous Materials}
+}
+@article{Al_Ghouti_2020,
+	doi = {10.1016/j.jhazmat.2020.122383},
+	url = {https://doi.org/10.1016%2Fj.jhazmat.2020.122383},
+	year = 2020,
+	month = {jul},
+	publisher = {Elsevier {BV}},
+	volume = {393},
+	pages = {122383},
+	author = {Mohammad A. Al-Ghouti and Dana A. Da{\textquotesingle}ana},
+	title = {Guidelines for the use and interpretation of adsorption isotherm models: A review},
+	journal = {Journal of Hazardous Materials}
+}
+@article{Li_2023,
+	doi = {10.1021/acs.langmuir.3c00255},
+	url = {https://doi.org/10.1021%2Facs.langmuir.3c00255},
+	year = 2023,
+	month = {may},
+	publisher = {American Chemical Society ({ACS})},
+	author = {Lujun Li and Yiming Zhao and Haibin Yu and Zhuo Wang and Yongjia Zhao and Mingqi Jiang},
+	title = {An {XGBoost} Algorithm Based on Molecular Structure and Molecular Specificity Parameters for Predicting Gas Adsorption},
+	journal = {Langmuir}
+}
+@article{Shrake1973,
+  doi = {10.1016/0022-2836(73)90011-9},
+  url = {https://doi.org/10.1016/0022-2836(73)90011-9},
+  year = {1973},
+  month = sep,
+  publisher = {Elsevier {BV}},
+  volume = {79},
+  number = {2},
+  pages = {351--371},
+  author = {A. Shrake and J.A. Rupley},
+  title = {Environment and exposure to solvent of protein atoms. Lysozyme and insulin},
+  journal = {J. Mol. Bio.}
+}
