--- a/1-screening.tex
+++ b/1-screening.tex
@@ -13,7 +13,7 @@
 \subsubsection{Adsorption isotherms and geometrical Descriptors}
 
 %General introduction
-Nanoporous materials are defined as materials with a nanoscale structure constituted by pores and cavities, which some are connected by a network of channels. These pores can be empty or filled with a variety of substances called adsorbates. By adhering molecules from a liquid or gas phase into the internal surfaces of the material, we can use it in various applications such as gas separation and purification,\cite{Li_2009,Lagorsse_2007} energy storage and conversion,\cite{Morris_2008,Qiu_2020} heterogeneous catalysis\cite{Bell_2003,Singh_2019,Pascanu_2019} drug delivery,\cite{Della_Rocca_2011,Bernini_2014} or sensing.\cite{Breslin_1976} By designing the chemical nature, size, shape and distribution of the pores, we can tailor the physicochemical properties to the targeted application.\cite{Yan_2020}
+Nanoporous materials are defined as materials with a nanoscale structure constituted by pores and cavities, which some are connected by a network of channels. These pores can be empty or filled with a variety of substances called adsorbates. By adhering molecules from a liquid or gas phase into the internal surfaces of the material, we can use it in diverse applications such as gas separation and purification,\cite{Li_2009,Lagorsse_2007} energy storage and conversion,\cite{Morris_2008,Qiu_2020} heterogeneous catalysis\cite{Bell_2003,Singh_2019,Pascanu_2019} drug delivery,\cite{Della_Rocca_2011,Bernini_2014} or sensing.\cite{Breslin_1976} By designing the chemical nature, size, shape and distribution of the pores, we can tailor the physicochemical properties to the targeted application.\cite{Yan_2020}
 
 %adsorption
 The process of adhering particles or molecules on surfaces is called adsorption. Adsorption occurs due to attractive forces between adsorbates and the adsorbent surface, such as Van der Waals forces, hydrogen bonding, and electrostatic interactions. The adsorption performance depends on the chemical nature of the interface, its exposed surface area and the shape of the pores. We usually characterize adsorption properties of an adsorbate compound by measuring the numbers of adsorbed molecules as a function of its pressure at a given temperature, which is called the adsorption isotherm. These isotherms can possibly be used, among other techniques, to specify the pore size distribution, accessible surface area and pore volume.\cite{Rouquerol_1994} By using fitting models, we can also use adsorption isotherms to characterize the maximum adsorption uptake among other adsorption descriptors.\cite{Wang_2020} Using a set of experimental isotherms at close but different temperatures, we can also retrieve information on the isosteric heat of adsorption $q_{st}$ (the negative differential of the excess enthalpy of adsorption with respect to the excess adsorption).\cite{Nicholson2000} This heat of adsorption (related to the enthalpy of adsorption) can also be directly obtained using calorimetry.\cite{Dunne_1996} Furthermore measurements at infinite dilution can also lead to a linear relation between the adsorbed quantity and the pressure defined by the Henry's law; another key adsorption descriptor, the Henry adsorption constant, is defined as the slope of this linear regime.\cite{Finsy2007} All of these thermodynamic quantities are most valuable in comparing experimental data to computational modeling to compare and characterize the materials suitable for a given gas adsorption process.
@@ -21,7 +21,7 @@ The process of adhering particles or molecules on surfaces is called adsorption.
 
 %pore size
 Most of the materials studied in this thesis will have pores with a size around the nanometer called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\cite{Sing_1985} Here,
-we will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\cite{Yan_2020} The pore size distribution (PSD) can be computationally determined if we have resolved the structure of the nanoporous material (using X-ray diffraction on crystallized porous solids). This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g. cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\cite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\cite{Radlinski_2004} In this thesis, we will rely on computationally analyzing X-ray diffusion data to deduce pore sizes and other geometrical characteristics. 
+we will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\cite{Yan_2020} The pore size distribution (PSD) can be computationally determined if we have resolved the structure of the nanoporous material (using X-ray diffraction on crystallized porous solids). This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g., cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\cite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\cite{Radlinski_2004} In this thesis, we will rely on computationally analyzing X-ray diffusion data to deduce pore sizes and other geometrical characteristics. 
 
 %volume / porosity
 The pore volume consists in the measure of the volume of ``closed'' and ``open'' pores of nanoporous materials. Depending on the way of measuring it, different quantities are probed. Some pores could not be accessed by some adsorbate; depending on the probe size the volume calculated will not be the same. Methods that do not rely on adsorption like scattering or stereology will, however, measure the total pore volume. The porosity or void fraction would be defined as the ratio between the pore volume and the apparent framework volume. Depending on the method, we can therefore retrieve either the total porosity, the porosity opened or closed to a given probe adsorbate. 
@@ -76,10 +76,10 @@ With the development of ever-increasing nanoporous material databases, computati
 To overcome these new challenges, people are looking increasingly towards transferable models trained by a machine learning (ML) algorithm on a diverse and size-limited subsample. Ideally, such a model is transferable to potentially millions of structures and can provide valuable QSPR. For instance, Fernandez et al.\cite{Fernandez_2013} used multiple linear regression analysis, decision tree regression, and nonlinear support-vector machine models to extract QSPR and establish rules of designing well-performing MOFs for methane storage, while identifying promising structures. In this first work, they only used geometrical descriptors to describe methane storage,\cite{Fernandez_2013} but realizing the importance of chemical descriptors, they proposed the atomic property weighted radial distribution function as a powerful descriptor to predict \ce{CO2} uptakes.\cite{Fernandez_2013_rdf} More importantly, they proved that ML can be used as a pre-screening tool to avoid running time-costly simulations by correctly identifying around \SI{95}{\percent} of the top 1000 best performing materials. Recently, the same group used similar techniques to predict \ce{CO2} working capacity as well as \ce{CO2}/\ce{H2} selectivity in MOFs for pre-combustion carbon capture.\cite{Dureckova_2019}
 
 \begin{figure*}[t]
-    \centering
-      \includegraphics[width=0.98\textwidth]{figures/1-screening/Screening_procedures.jpg}
-      \caption{Simplified representation of typical funnel-type screening procedures, exemplified on three different applications from the published literature. (a) Wilmer et al.\cite{Wilmer_2012} used a series of bi-component Grand Canonical Monte Carlo (GCMC) calculations at different levels of complexity to screen a large dataset of hypothetical MOFs for methane storage application. (b) Yang et al.\cite{Yang_2020} used simulations at infinite dilution to prescreen the dataset before using computationally demanding simulations and multiple metrics to find the most promising ZIFs for carbon capture. (c) In Qiao et al.\cite{Qiao_2016}, transport properties were screened along standard adsorption properties to find the best materials for the targeted \ce{CO2}/\ce{N2}/\ce{CH4} ternary separation; similarly, cheaper calculations at infinite dilution were carried out in a first step, before using more expensive calculations at working pressure and temperature.}\label{fgr:screening}
-    \end{figure*}
+  \centering
+    \includegraphics[width=0.98\textwidth]{figures/1-screening/Screening_procedures.jpg}
+    \caption{Simplified representation of typical funnel-type screening procedures, exemplified on three different applications from the published literature. (a) Wilmer et al.\cite{Wilmer_2012} used a series of bi-component Grand Canonical Monte Carlo (GCMC) calculations at different levels of complexity to screen a large dataset of hypothetical MOFs for methane storage application. (b) Yang et al.\cite{Yang_2020} used simulations at infinite dilution to prescreen the dataset before using computationally demanding simulations and multiple metrics to find the most promising ZIFs for carbon capture. (c) In Qiao et al.\cite{Qiao_2016}, transport properties were screened along standard adsorption properties to find the best materials for the targeted \ce{CO2}/\ce{N2}/\ce{CH4} ternary separation; similarly, cheaper calculations at infinite dilution were carried out in a first step, before using more expensive calculations at working pressure and temperature.}\label{fgr:screening}
+\end{figure*}
 
 
 \section{An overview of screening methodologies}
