--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -10,7 +10,7 @@
 
 \subsection{Geometrical descriptors}
 
-Before going into the details of the adsorption properties themselves, we will first introduce the different simulation techniques used to characterize the internal pore structure of a material key in interpreting the adsorption properties obtained using more complex molecular simulations. All the geometrical descriptors used in this thesis have been calculated using the Zeo++ software;\cite{Zeo++} other tools exist,\ref{First_2013,PoreBlazer} but the use of Voronoi decomposition of the volume speeds up the calculation making it the preferred tool for this task (efficiency gain mainly on volume calculation).~\cite{Rycroft_2009} 
+Before going into the details of the adsorption properties themselves, we will first introduce the different simulation techniques used to characterize the internal pore structure of a material key in interpreting the adsorption properties obtained using more complex molecular simulations. All the geometrical descriptors used in this thesis have been calculated using the Zeo++ software;\cite{Zeo++} other tools exist,\ref{First_2013,PoreBlazer} but the use of Voronoi decomposition of the volume speeds up the calculation making it the preferred tool for this task (efficiency gain mainly on volume calculation).\cite{Rycroft_2009} 
 
 \subsubsection{Pore size}
 
